# TinyPoll

./: Cargo.toml  README.md
migrations/: 20251028185550_create_users_table.sql  20251029191009_create_users_table.sql  20251029191013_create_polls_table.sql  20251029191016_create_poll_options_table.sql  20251029191020_create_votes_table.sql  20251030203929_fix_created_at_type.sql
src/: main.rs
src/config/: config.rs  mod.rs
src/db/: mod.rs
src/models/: mod.rs  poll.rs  poll_option.rs  user.rs  vote.rs
src/routes/: mod.rs  polls.rs
