[package]
name = "TinyPoll"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
bcrypt = "0.17.1"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rust-crypto = "0.2.36"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "chrono",  "runtime-tokio", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
tower-http = "0.6.6"
tracing = "0.1.41"
chrono =  { version = "0.4.42", features = ["serde"] }
